--- a/Quiz1.html
+++ b/Quiz1.html
@@ -12,7 +12,7 @@
             <h1>Welcome to the Quiz</h1>
         </div>
         <div class="quiz">
-            <button onclick="location.href='Rodent_gallery.html'">Rodent Gallery</button>        
+            <button onclick="location.href='Rodent_hp.html'">Rodent Gallery</button>        
         </div>
     </header>
   <h1>Find Your Perfect Pet</h1>
