--- a/Rodent_hp.html
+++ b/Rodent_hp.html
@@ -11,9 +11,12 @@
         <div class="smoke-background">
             <h1>Welcome to the Rodent Gallery</h1>
         </div>
-        <div class="quiz">
+        <div class="quizHomePg">
             <button onclick="location.href='Quiz1.html'">Quiz</button>        
         </div>
+        <!--<div class="HomePg">
+            <button onclick="location.href='Home.html'">Home</button>
+        </div>-->
     </header>
     <main>
         
