--- a/Rodent_hp.html
+++ b/Rodent_hp.html
@@ -22,42 +22,42 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Pictures\marvin.jpeg" alt="Mouse">
+                <img src="marvin.jpeg" alt="Mouse">
                 <h1>Marvin</h1>
                 <h2>Mouse</h2>
                 <p>He can, and will, eat everything in your house.</p>
                 <button onclick="location.href='Marvin_mouse.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">
+                <img src="SarahSimg.jpg" alt="Squirrel">
                 <h1>Sarah</h1>
                 <h2>Red squirrel</h2>
                 <p>Mischevious little dame but will keep a smile on your face.</p>
                 <button onclick="location.href='Sarah_squirrel.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">
+                <img src="CarmenCimg.jpg" alt="Capybara">
                 <h1>Carmen</h1>
                 <h2>Capybara</h2>
                 <p>Why choose a dog when you can have a capybara...</p>
                 <button onclick="location.href='Carmen_capybara.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">
+                <img src="HarrisonHimg.jpg" alt="Hamster">
                 <h1>Harrison</h1>
                 <h2>Hamster</h2>
                 <p>Permanently plotting world domination</p>
                 <button onclick="location.href='Harrison_hamster.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\BillBimg.jpg" alt="Beaver">
+                <img src="BillBimg.jpg" alt="Beaver">
                 <h1>Bill</h1>
                 <h2>Beaver</h2>
                 <p>If you have a flooding problem, he is great</p>
                 <button onclick="location.href='Bill_beaver.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\Robborimg.jpg" alt="Rat">
+                <img src="Robborimg.jpg" alt="Rat">
                 <h1>Robbo</h1>
                 <h2>Rat</h2>
                 <p>Very low maintenance pet, he likes to exercise a lot</p>
