--- a/Sarah_squirrel.html
+++ b/Sarah_squirrel.html
@@ -18,7 +18,7 @@
     <main>
         <div class="container">
             <div class="image">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">
+                <img src="SarahSimg.jpg" alt="Squirrel">
             </div>
             <div class="text">
             <h1>This is Sarah the Squirrel</h1>
