--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rodent Gallery</title>
+    <link rel="stylesheet" href="MainPg.css">
 </head>
 <body>
-    <h1>Say something please!</h1>
+    <header class="pistachio-header">
+        <div class="smoke-background">
+            <h1>Beastly Bonds</h1>
+        </div>
+    </header>
+    <main>
+        
+        <div class="rodent-container">
+            <div class="rodent-block">
+                <img src="C:\Users\frase\OneDrive\Pictures\marvin.jpeg" alt="Mouse">
+                <h1>Rodents</h1>
+                <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
+            </div>
+            <div class="rodent-block">
+                <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">-->
+                <h1>Monkeys</h1>
+                <button onclick="location.href='Sarah_squirrel.html'">Learn More</button>
+            </div>
+            <div class="rodent-block">
+                <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">-->
+                <h1>Reptiles</h1>
+                <button onclick="location.href='Carmen_capybara.html'">Learn More</button>
+            </div>
+            <div class="rodent-block">
+                <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">-->
+                <h1>Dogs</h1>
+                <button onclick="location.href='Harrison_hamster.html'">Learn More</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
