--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Pictures\marvin.jpeg" alt="Mouse">
+                <img src="marvin.jpeg" alt="Mouse">
                 <h1>Rodents</h1>
                 <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
             </div>
