--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rodent Gallery</title>
+    <title>Beastly Bonds</title>
     <link rel="stylesheet" href="MainPg.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="marvin.jpeg" alt="Mouse">
+                <img src="CarmenCimg.jpeg" alt="Mouse">
                 <h1>Rodents</h1>
                 <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
             </div>
