--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beastly Bonds</title>
     <link rel="stylesheet" href="MainPg.css">
+    <link rel="stylesheet" href="40666960/styles.css"> 
 </head>
 <body>
-    <header class="pistachio-header">
-        <div class="smoke-background">
-            <h1>Beastly Bonds</h1>
-        </div>
+    <header class="header">
+        <h1>Beastly bonds</h1>
     </header>
     <main>
         
@@ -22,7 +21,7 @@
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">-->
-                <h1>Monkeys</h1>
+                <h1>Dogs</h1>
                 <button onclick="location.href='Sarah_squirrel.html'">Learn More</button>
             </div>
             <div class="rodent-block">
