--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">-->
                 <h1>Dogs</h1>
-                <button onclick="location.href='Sarah_squirrel.html'">Learn More</button>
+                <button onclick="location.href='.idea/Dog-section/adoption-process.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">-->
                 <h1>Reptiles</h1>
-                <button onclick="location.href='Carmen_capybara.html'">Learn More</button>
+                <button onclick="location.href=''">Learn More</button>
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">-->
