--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">-->
                 <h1>Reptiles</h1>
-                <button onclick="location.href=''">Learn More</button>
+                <button onclick="location.href='index.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">-->
-                <h1>Dogs</h1>
+                <h1>Monkeys</h1>
                 <button onclick="location.href='Harrison_hamster.html'">Learn More</button>
             </div>
         </div>
