--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="CarmenCimg.jpeg" alt="Rodents">
+                <img src="CarmenCimg.jpg" alt="Rodents">
                 <h1>Rodents</h1>
                 <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
             </div>
