--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\SarahSimg.jpg" alt="Squirrel">-->
-                <h1>Dogs</h1>
-                <button onclick="location.href='.idea/Dog-section/adoption-process.html'">Learn More</button>
+                <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
+                <h1>Monkeys</h1>
+                <button onclick="location.href='.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">-->
