--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="rodent-block">
                 <img src="CarmenCimg.jpg" alt="Rodents">
                 <h1>Rodents</h1>
-                <button onclick="location.href='Rodent_gallery.html'">Learn More</button>
+                <button onclick="location.href='Rodent_hp.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
