--- a/40652444 Rodents/Rodent_hp.html
+++ b/40652444 Rodents/Rodent_hp.html
@@ -22,7 +22,7 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Pictures\marvin.jpeg" alt="Mouse">
+                <img src="" alt="Mouse">
                 <h1>Marvin</h1>
                 <h2>Mouse</h2>
                 <p>He can, and will, eat everything in your house.</p>
