--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="CarmenCimg.jpg" alt="Rodents">
+                <img src="40652444 Rodents/CarmenCimg.jpg" alt="Rodents">
                 <h1>Rodents</h1>
-                <button onclick="location.href='Rodent_hp.html'">Learn More</button>
+                <button onclick="location.href='40652444 Rodents/Rodent_hp.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
