--- a/40652444 Rodents/Rodent_hp.html
+++ b/40652444 Rodents/Rodent_hp.html
@@ -12,7 +12,7 @@
             <h1>Welcome to the Rodent Gallery</h1>
         </div>
         <div class="quizHomePg">
-            <button onclick="location.href='40652444 Rodents/Quiz1.html'">Quiz</button>        
+            <button onclick="window.location.href='40652444 Rodents/Quiz1.html'">Quiz</button>        
         </div>
         <!--<div class="HomePg">
             <button onclick="location.href='Home.html'">Home</button>
