--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
             <div class="rodent-block">
                 <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">-->
-                <h1>Monkeys</h1>
-                <button onclick="location.href='Harrison_hamster.html'">Learn More</button>
+                <h1>Dogs</h1>
+                <button onclick="window.location.href='.idea/Dog-section/adoption-process.html'">Learn More</button>
             </div>
         </div>
     </main>
