--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beastly Bonds</title>
     <link rel="stylesheet" href="MainPg.css">
-    <link rel="stylesheet" href="40666960/styles.css"> 
+    <link rel="stylesheet" href="40652444 Rodents/styles.css"> 
 </head>
 <body>
     <header class="header">
