--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             <div class="rodent-block">
                 <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
                 <h1>Monkeys</h1>
-                <button onclick="location.href='40666960/index.html'">Learn More</button>
+                <button onclick="window.location.href='40666960/index.html'">Learn More</button>
             </div>
-            <div class="rodent-block">
+            <!--<div class="rodent-block">
                 <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">
                 <h1>Reptiles</h1>
                 <button onclick="location.href='index.html'">Learn More</button>
-            </div>
-            <div class="rodent-block">
-                <!--<img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">-->
+            </div>-->
+            <!--<div class="rodent-block">
+                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">
                 <h1>Dogs</h1>
-                <button onclick="window.location.href='.idea/Dog-section/adoption-process.html'">Learn More</button>
-            </div>
+                <button onclick="window.location.href='.Dog-section/adoption-process.html'">Learn More</button>
+            </div>-->
         </div>
     </main>
 </body>
