Renamed my file name so no space

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beastly Bonds</title>
     <!--<link rel="stylesheet" href="MainPg.css">-->
-    <link rel="stylesheet" href="40652444 Rodents/styles.css"> 
+    <link rel="stylesheet" href="40652444_Rodents/styles.css"> 
 </head>
 <body>
     <header class="header">
@@ -15,9 +15,9 @@
         
         <div class="rodent-container">
             <div class="rodent-block">
-                <img src="40652444 Rodents/CarmenCimg.jpg" alt="Rodents">
+                <img src="40652444_Rodents/CarmenCimg.jpg" alt="Rodents">
                 <h1>Rodents</h1>
-                <button onclick="window.location.href='40652444 Rodents/Rodent_hp.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Rodent_hp.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
