--- a/40652444_Rodents/Rodent_hp.html
+++ b/40652444_Rodents/Rodent_hp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodent Gallery</title>
-    <link rel="stylesheet" href="40652444 Rodents/styles.css">
+    <link rel="stylesheet" href="40652444_Rodents/styles.css">
 </head>
 <body>
     <header class="pistachio-header">
