--- a/40652444_Rodents/Rodent_hp.html
+++ b/40652444_Rodents/Rodent_hp.html
@@ -26,42 +26,42 @@
                 <h1>Marvin</h1>
                 <h2>Mouse</h2>
                 <p>He can, and will, eat everything in your house.</p>
-                <button onclick="location.href='40652444_Rodents/Marvin_mouse.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Marvin_mouse.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40652444_Rodents/SarahSimg.jpg" alt="Squirrel">
                 <h1>Sarah</h1>
                 <h2>Red squirrel</h2>
                 <p>Mischevious little dame but will keep a smile on your face.</p>
-                <button onclick="location.href='40652444_Rodents/Sarah_squirrel.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Sarah_squirrel.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40652444_Rodents/CarmenCimg.jpg" alt="Capybara">
                 <h1>Carmen</h1>
                 <h2>Capybara</h2>
                 <p>Why choose a dog when you can have a capybara...</p>
-                <button onclick="location.href='40652444_Rodents/Carmen_capybara.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Carmen_capybara.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40652444_Rodents/HarrisonHimg.jpg" alt="Hamster">
                 <h1>Harrison</h1>
                 <h2>Hamster</h2>
                 <p>Permanently plotting world domination</p>
-                <button onclick="location.href='40652444_Rodents/Harrison_hamster.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Harrison_hamster.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40652444_Rodents/BillBimg.jpg" alt="Beaver">
                 <h1>Bill</h1>
                 <h2>Beaver</h2>
                 <p>If you have a flooding problem, he is great</p>
-                <button onclick="location.href='40652444_Rodents/Bill_beaver.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Bill_beaver.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="40652444_Rodents/Robborimg.jpg" alt="Rat">
                 <h1>Robbo</h1>
                 <h2>Rat</h2>
                 <p>Very low maintenance pet, he likes to exercise a lot</p>
-                <button onclick="location.href='40652444_Rodents/Robbo_rat.html'">Learn More</button>
+                <button onclick="window.location.href='40652444_Rodents/Robbo_rat.html'">Learn More</button>
             </div>
         </div>
     </main>
