--- a/40652444_Rodents/Rodent_hp.html
+++ b/40652444_Rodents/Rodent_hp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodent Gallery</title>
-    <link rel="stylesheet" href="40652444_Rodents/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="pistachio-header">
@@ -12,7 +12,7 @@
             <h1>Welcome to the Rodent Gallery</h1>
         </div>
         <div class="quizHomePg">
-            <button onclick="window.location.href='40652444_Rodents/Quiz1.html'">Quiz</button>        
+            <button onclick="window.location.href='Quiz1.html'">Quiz</button>        
         </div>
         <!--<div class="HomePg">
             <button onclick="location.href='Home.html'">Home</button>
