--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <h1>Reptiles</h1>
                 <button onclick="location.href='index.html'">Learn More</button>
             </div>-->
-            <!--<div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg" alt="Hamster">
+            <div class="rodent-block">
+                <img src="Dog-section/Pictures/beagle.jpeg" alt="Dog">
                 <h1>Dogs</h1>
-                <button onclick="window.location.href='.Dog-section/adoption-process.html'">Learn More</button>
-            </div>-->
+                <button onclick="window.location.href='Dog-section/adoption-process.html'">Learn More</button>
+            </div>
         </div>
     </main>
 </body>
