--- a/40652444_Rodents/Carmen_capybara.html
+++ b/40652444_Rodents/Carmen_capybara.html
@@ -18,7 +18,7 @@
     <main>
         <div class="container">
             <div class="image">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg"alt="Capybara">
+                <img src="CarmenCimg.jpg"alt="Capybara">
             </div>
             <div class="text">
             <h1>This is Carmen the capybara</h1>
