--- a/40652444_Rodents/Harrison_hamster.html
+++ b/40652444_Rodents/Harrison_hamster.html
@@ -18,7 +18,7 @@
     <main>
         <div class="container">
             <div class="image">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\HarrisonHimg.jpg"alt="Hamster">
+                <img src="HarrisonHimg.jpg"alt="Hamster">
             </div>
             <div class="text">
             <h1>This is Harrison the hamster</h1>
