--- a/40652444_Rodents/Marvin_mouse.html
+++ b/40652444_Rodents/Marvin_mouse.html
@@ -18,7 +18,7 @@
     <main>
         <div class="container">
             <div class="image">
-                <img src="C:\Users\frase\OneDrive\Pictures\marvin.jpeg" alt="Mouse">
+                <img src="marvin.jpeg" alt="Mouse">
             </div>
             <div class="text">
             <h1>This is marvin the mouse</h1>
