--- a/40652444_Rodents/Robbo_rat.html
+++ b/40652444_Rodents/Robbo_rat.html
@@ -18,7 +18,7 @@
     <main>
         <div class="container">
             <div class="image">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\Robborimg.jpg" alt="Rat">
+                <img src="Robborimg.jpg" alt="Rat">
             </div>
             <div class="text">
             <h1>This is Robbo the rat</h1>
