connecting a home page button to my first one

--- a/40652444_Rodents/Rodent_hp.html
+++ b/40652444_Rodents/Rodent_hp.html
@@ -14,9 +14,9 @@
         <div class="quizHomePg">
             <button onclick="window.location.href='Quiz1.html'">Quiz</button>        
         </div>
-        <!--<div class="HomePg">
-            <button onclick="location.href='Home.html'">Home</button>
-        </div>-->
+        <div class="HomePg">
+            <button onclick="window.location.href='index.html'">Home</button>
+        </div>
     </header>
     <main>
         
