--- a/40652444_Rodents/Rodent_hp.html
+++ b/40652444_Rodents/Rodent_hp.html
@@ -15,7 +15,7 @@
             <button onclick="window.location.href='Quiz1.html'">Quiz</button>        
         </div>
         <div class="HomePg">
-            <button onclick="window.location.href='index.html'">Home</button>
+            <button onclick="window.location.href='../index.html'">Home</button>
         </div>
     </header>
     <main>
