updating my code

--- a/Dog-section/adoption-agreement.html
+++ b/Dog-section/adoption-agreement.html
@@ -13,8 +13,7 @@
     <a href="index.html" class="logo">Beastly Bonds</a>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="adoption-process.html">Adoption Process</a></li>
         <li><a href="adoption-agreement.html" class="active">Adoption Agreement</a></li>
         <li><a href="dog.html">Available Pets</a></li>
