--- a/Dog-section/dog.html
+++ b/Dog-section/dog.html
@@ -9,10 +9,10 @@
 <body>
 <header class="site-header">
     <div class="container header-container">
-        <a href="index.html" class="logo">Beastly Bonds</a>
+        <a href="../index.html" class="logo">Beastly Bonds</a>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="dog.html" class="active">Dogs</a></li>
                 <li><a href="dog-quiz.html">Match Quiz</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -45,7 +45,7 @@
                         <p class="dog-age">2 years old</p>
                         <p class="dog-description">Friendly, energetic, and great with kids.</p>
                         <div class="dog-actions">
-                            <a href="dog-profile-buddy.html" class="btn btn-primary btn-small">View Profile</a>
+                            <a href="dog-profile-Buddy.html" class="btn btn-primary btn-small">View Profile</a>
                             <a href="dog-quiz.html" class="btn btn-outline btn-small">Match Me</a>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                         <p class="dog-age">5 years old</p>
                         <p class="dog-description">Intelligent, calm, and hypoallergenic.</p>
                         <div class="dog-actions">
-                            <a href="dog-profile-max.html" class="btn btn-primary btn-small">View Profile</a>
+                            <a href="dog-profile-Max.html" class="btn btn-primary btn-small">View Profile</a>
                             <a href="dog-quiz.html" class="btn btn-outline btn-small">Match Me</a>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                         <p class="dog-age">3 years old</p>
                         <p class="dog-description">Energetic, playful, and loves adventure.</p>
                         <div class="dog-actions">
-                            <a href="dog-profile-luna.html" class="btn btn-primary btn-small">View Profile</a>
+                            <a href="dog-profile-Luna.html" class="btn btn-primary btn-small">View Profile</a>
                             <a href="dog-quiz.html" class="btn btn-outline btn-small">Match Me</a>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         <p class="dog-age">4 years old</p>
                         <p class="dog-description">Friendly, curious, and great with families.</p>
                         <div class="dog-actions">
-                            <a href="dog-profile-bella.html" class="btn btn-primary btn-small">View Profile</a>
+                            <a href="dog-profile-Bella.html" class="btn btn-primary btn-small">View Profile</a>
                             <a href="dog-quiz.html" class="btn btn-outline btn-small">Match Me</a>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                         <p class="dog-age">1 year old</p>
                         <p class="dog-description">Loyal, loving, and always playful.</p>
                         <div class="dog-actions">
-                            <a href="dog-profile-charlie.html" class="btn btn-primary btn-small">View Profile</a>
+                            <a href="dog-profile-Charlie.html" class="btn btn-primary btn-small">View Profile</a>
                             <a href="dog-quiz.html" class="btn btn-outline btn-small">Match Me</a>
                         </div>
                     </div>
