--- a/Dog-section/thank-you.html
+++ b/Dog-section/thank-you.html
@@ -23,8 +23,7 @@
     <a href="index.html" class="logo">Beastly Bonds</a>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="adoption-process.html">Adoption Process</a></li>
         <li><a href="adoption-agreement.html">Adoption Agreement</a></li>
         <li><a href="dog.html">Available Pets</a></li>
@@ -70,7 +69,7 @@
           <p><strong>Phone:</strong> (555) 123-4567</p>
         </div>
 
-        <a href="index.html" class="btn btn-primary">Return to Homepage</a>
+        <a href="../index.html" class="btn btn-primary">Return to Homepage</a>
       </div>
     </div>
   </section>
