--- a/Dog-section/adoption-process.html
+++ b/Dog-section/adoption-process.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="logo">Beastly Bonds</a>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="adoption-process.html" class="active">Adoption Process</a></li>
                 <li><a href="adoption-agreement.html">Adoption Agreement</a></li>
                 <li><a href="dog.html">Available Pets</a></li>
