--- a/Dog-section/dog-quiz.html
+++ b/Dog-section/dog-quiz.html
@@ -10,7 +10,7 @@
 <nav class="quiz-nav">
   <div class="container">
     <div class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="dog.html">Dog Home</a>
     </div>
   </div>
