Updating home page

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <h1>Monkeys</h1>
                 <button onclick="window.location.href='40666960/index.html'">Learn More</button>
             </div>
-            <!--<div class="rodent-block">
-                <img src="C:\Users\frase\OneDrive\Documentos\Web Technologies\CarmenCimg.jpg" alt="Capybara">
+            <div class="rodent-block">
+                <img src="main/java/org/example/images/shadow-the-black-rat-snake.jpg" alt="Capybara">
                 <h1>Reptiles</h1>
-                <button onclick="location.href='index.html'">Learn More</button>
+                <button onclick="location.href='main/java/org/example/index.html'">Learn More</button>
             </div>-->
             <div class="rodent-block">
                 <img src="Dog-section/Pictures/beagle.jpeg" alt="Dog">
