--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="rodent-block">
                 <img src="40666960/imgs/bonnet-macaque-sitting-railing-holding-green-coconut.jpg" alt="Squirrel">
                 <h1>Monkeys</h1>
-                <button onclick="window.location.href='40666960/index.html'">Learn More</button>
+                <button onclick="window.location.href='40666960/monkeys.html'">Learn More</button>
             </div>
             <div class="rodent-block">
                 <img src="main/java/org/example/images/shadow-the-black-rat-snake.jpg" alt="Capybara">
