--- a/Carmen_capybara.html
+++ b/Carmen_capybara.html
@@ -12,7 +12,7 @@
             <h1>Carmen</h1>
         </div>
         <div class="quiz">
-            <button onclick="location.href='Quiz1.html'">Quiz</button>        
+            <button onclick="window.location.href='Quiz1.html'">Quiz</button>        
         </div>
     </header>
     <main>
