Deleted the end of the comment block so we dont have an arrow on the page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <button onclick="window.location.href='40666960/monkeys.html'">Learn More</button>
             </div>
             <div class="rodent-block">
-                <img src="main/java/org/example/images/shadow-the-black-rat-snake.jpg" alt="Capybara">
+               <img src="main/java/org/example/images/shadow-the-black-rat-snake.jpg" alt="Capybara">
                 <h1>Reptiles</h1>
                 <button onclick="location.href='main/java/org/example/index.html'">Learn More</button>
-            </div>-->
+            </div>
             <div class="rodent-block">
                 <img src="Dog-section/Pictures/beagle.jpeg" alt="Dog">
                 <h1>Dogs</h1>
