--- a/40666960/monkey-profile.html
+++ b/40666960/monkey-profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="imgs/logo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
-  <script src="app.js"></script>
+  <script src="profile.js"></script>
   <title>Beastly Bonds</title>
 </head>
 <body>
@@ -30,7 +30,11 @@
   </div>
 </header>
 <main>
-
+  <section class="padding-block | bg-neutral-100 | text-primary-900">
+    <div class="container">
+      <div id="profile"></div>
+    </div>
+  </section>
 </main>
 <footer class="padding-block | bg-primary-900 | text-neutral-100">
   <div class="container">
