update profile page

--- a/40666960/monkey-profile.html
+++ b/40666960/monkey-profile.html
@@ -32,7 +32,7 @@
 <main>
   <section class="padding-block | bg-neutral-100 | text-primary-900">
     <div class="container">
-      <div id="profile"></div>
+      <div class="even-columns" id="profile"></div>
     </div>
   </section>
 </main>
