create link to go back to gallery

--- a/40666960/monkey-profile.html
+++ b/40666960/monkey-profile.html
@@ -32,6 +32,7 @@
 <main>
   <section class="padding-block | bg-neutral-100 | text-primary-900">
     <div class="container">
+      <a href="monkeys.html" id="back-btn" class="button"> back</a>
       <div class="even-columns" id="profile"></div>
     </div>
   </section>
