--- a/40666960/monkey-profile.html
+++ b/40666960/monkey-profile.html
@@ -41,9 +41,9 @@
   <div class="container">
     <div class="footer">
       <ul class="socials-list" role="list" aria-label="social links">
-        <li><a aria-label="instagram" href="#"><img src="imgs/icons8-instagram.svg" alt=""></a></li>
-        <li><a aria-label="facebook" href="#"><img src="imgs/icons8-facebook.svg" alt=""></a></li>
-        <li><a aria-label="youtube" href="#"><img src="imgs/icons8-youtube.svg" alt=""></a></li>
+        <li><a aria-label="instagram" href="https://www.instagram.com/"><img src="imgs/icons8-instagram.svg" alt=""></a></li>
+        <li><a aria-label="facebook" href="https://www.facebook.com/"><img src="imgs/icons8-facebook.svg" alt=""></a></li>
+        <li><a aria-label="youtube" href="https://www.youtube.com/"><img src="imgs/icons8-youtube.svg" alt=""></a></li>
       </ul>
       <nav class="footer-nav">
         <ul class="nav-list" role="list">
