--- a/40666960/monkeys.html
+++ b/40666960/monkeys.html
@@ -72,9 +72,9 @@
         <div class="container">
             <div class="footer">
                 <ul class="socials-list" role="list" aria-label="social links">
-                    <li><a aria-label="instagram" href="#"><img src="imgs/icons8-instagram.svg" alt=""></a></li>
-                    <li><a aria-label="facebook" href="#"><img src="imgs/icons8-facebook.svg" alt=""></a></li>
-                    <li><a aria-label="youtube" href="#"><img src="imgs/icons8-youtube.svg" alt=""></a></li>
+                    <li><a aria-label="instagram" href="https://www.instagram.com/"><img src="imgs/icons8-instagram.svg" alt=""></a></li>
+                    <li><a aria-label="facebook" href="https://www.facebook.com/"><img src="imgs/icons8-facebook.svg" alt=""></a></li>
+                    <li><a aria-label="youtube" href="https://www.youtube.com/"><img src="imgs/icons8-youtube.svg" alt=""></a></li>
                 </ul>
                 <nav class="footer-nav">
                     <ul class="nav-list" role="list">
@@ -82,7 +82,7 @@
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Community</a></li>
                     </ul></nav>
-                <p>© 2025 Beastly Bonds</p>
+                <p>© 2025 BeastlyBonds</p>
             </div>
         </div>
     </footer>
