--- a/40666960/monkeys.html
+++ b/40666960/monkeys.html
@@ -12,7 +12,7 @@
     <header class="padding-block | bg-neutral-100 | text-primary-900">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="#"><img class="svg" src="imgs/the-cow-svgrepo-com.svg" alt="BeastlyBonds"></a>
+                <a href="monkeys.html"><img class="svg" src="imgs/the-cow-svgrepo-com.svg" alt="BeastlyBonds"></a>
                 <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
                     <img class="icon-hamburger svg" src="imgs/icons8-hamburger-menu.svg" alt="" aria-hidden="true">
                     <img class="icon-closed svg" src="imgs/icon-closed.svg" alt="" aria-hidden="true">
