--- a/40652444_Rodents/Bill_beaver.html
+++ b/40652444_Rodents/Bill_beaver.html
@@ -12,7 +12,7 @@
             <h1>Bill</h1>
         </div>
         <div class="quiz">
-            <button onclick="location.href='quiz_p1.html'">Quiz</button>        
+            <button onclick="window.location.href='quiz_p1.html'">Quiz</button>        
         </div>
     </header>
     <main>
